--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
     <div class="navbar">
         <h1>LITReview</h1>
         <!-- {% if user.is_authenticated %} -->
-        <p><a href="#">Flux</a></p>
-        <p><a href="#">Posts</a></p>
-        <p><a href="#">Abonnements</a></p>
-        <p><a href="#">Se déconnecter</a></p>
+        <p><a href="{% url 'feed' %}">Flux</a></p>
+        <p><a href="{% url 'my-posts' %}">Posts</a></p>
+        <p><a href="{% url 'subscriptions' %}">Abonnements</a></p>
+        <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
         <!-- {% endif %} -->
     </div>
 
