--- a/myapp/templates/myapp/feed.html
+++ b/myapp/templates/myapp/feed.html
@@ -5,4 +5,32 @@
 {% block content %}
 <p><a href="{% url 'create-ticket' %}"><button type="submit">Demander une critique</button></a></p>
 <p><a href="{% url 'create-review' %}"><button type="submit">Créer une critique</button></a></p>
+
+<div class="main_feed">
+
+
+    {% for review in reviews %}
+    <p>{{ review.title }} - {{ review.rating }}</p>
+    <p>{{ review.comment }}</p>
+    <p>Posté par {{ review.original_poster }}</p>
+    <p>Ticket - {{ review.ticket.requester }}</p>
+    <p>{{ review.ticket.title }}</p>
+    <p>{{ review.ticket.description }}</p>
+    <p><img src="{{ review.ticket.image }}" /></p>
+    {% endfor %}
+
+    {% for ticket in tickets %}
+    <p>{{ ticket.requester }} à demandé une critique</p>
+    <p>{{ ticket.title }}</p>
+    <p>{{ ticket.description }}</p>
+    <p><img src="{{ ticket.image }}" /></p>
+    {% if not ticket.review %}
+    <p><a href="{% url 'create-review' %}"><button type="submit">Créer une critique</button></a></p>
+    {% endif %}
+    {% endfor %}
+ 
+
+
+
+</div>
 {% endblock content %}
