--- a/templates/base.html
+++ b/templates/base.html
@@ -7,26 +7,68 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
+
     <title>LITReview</title>
 </head>
 
 <body>
+    <header>
+        <div class="container-fluid" id="nav">
+            <div class="row">
+                <nav class="col navbar navbar-expand-md navbar-dark bg-custom flex-md-nowrap flex-wrap">
 
-    <div class="navbar">
-        <h1>LITReview</h1>
-        <!-- {% if user.is_authenticated %} -->
-        <p><a href="{% url 'feed' %}">Flux</a></p>
-        <p><a href="{% url 'my-posts' %}">Posts</a></p>
-        <p><a href="{% url 'subscriptions' %}">Abonnements</a></p>
-        <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
-        <!-- {% endif %} -->
-    </div>
+                    <div class="flex-grow-1">
+                        <!--spacer-->
+                    </div>
+
+                    <div class="flex-grow-1">
+
+                        <a class="navbar-brand" href="{% url 'feed' %}" id="brand"><img src="{% static 'images/LR_logo.png' %}"
+                                alt="" width="35" height="35" class="d-inline-block align-text-top">LITReview</a>
+
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target=".dual-collapse2">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+
+                    {% if user.is_authenticated %}
+                    <div class="navbar-collapse collapse flex-grow-1 justify-content-center">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'feed' %}">Flux</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'my-posts' %}">Posts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'subscriptions' %}">Abonnements</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'logout' %}">Se déconnecter</a>
+                            </li>
+                        </ul>
+                    </div>
+                    {% endif %}
+
+                </nav>
+            </div>
+        </div>
+    </header>
 
     <div class="main">
         {% block content %}{% endblock content %}
     </div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
