--- a/myapp/templates/myapp/ticket_review.html
+++ b/myapp/templates/myapp/ticket_review.html
@@ -3,5 +3,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2>Vous êtes en train de poster en réponse à </h2>
 
+<p>{{ ticket.requester }} à demandé une critique</p>
+<p>{{ ticket.title }}</p>
+<p>{{ ticket.description }}</p>
+<p><img src="{{ ticket.image.url }}" /></p>
+
+<form method="post" enctype="multipart/form-data">
+    {{ review_form.as_p }}
+    {% csrf_token %}
+    <button type="submit">Envoyer</button>
+</form>
 {% endblock content %}
