--- a/myapp/templates/myapp/my_posts.html
+++ b/myapp/templates/myapp/my_posts.html
@@ -3,5 +3,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2>Vos posts</h2>
+<div class="container main_feed">
+    <div class="row">
+        <div class="col-md-12">
 
+
+            {% for review in reviews %}
+            <p>{{ review.title }} - {{ review.rating }}</p>
+            <p>{{ review.comment }}</p>
+            <p>Posté par {{ review.original_poster }}</p>
+            <div class="col-md-6">
+                <p>Ticket - {{ review.ticket.requester }}</p>
+                <p>{{ review.ticket.title }}</p>
+                <p>{{ review.ticket.description }}</p>
+                <p><img src="{{ review.ticket.image.url }}" /></p>
+            </div>
+            {% endfor %}
+
+            {% for ticket in tickets %}
+            <p>{{ ticket.requester }} à demandé une critique</p>
+            <p>{{ ticket.title }}</p>
+            <p>{{ ticket.description }}</p>
+            <p><img src="{{ ticket.image.url }}" /></p>
+            {% if not ticket.review %}
+            <p><a href="{% url 'ticket-review' ticket.id %}"><button type="button" class="btn btn-dark">Créer une critique</button></a></p>
+            {% endif %}
+            {% endfor %}
+
+        </div>
+    </div>
+</div>
 {% endblock content %}
