--- a/myapp/templates/myapp/subscriptions.html
+++ b/myapp/templates/myapp/subscriptions.html
@@ -3,5 +3,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2>Suivre d'autres utilisateurs</h2>
+    <form method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button type="submit" >Envoyer</button>
+    </form>
+<h2>Abonnements</h2>
+
+<p>{{ users }}</p>
+
+<h2>Abonnés</h2>
 
 {% endblock content %}
