ajout du formulaire

--- a/myapp/templates/myapp/change_ticket.html
+++ b/myapp/templates/myapp/change_ticket.html
@@ -3,5 +3,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<form method="post">
+    {{ edit_form.as_p }}
+    {% csrf_token %}
+    <button type="submit" >Envoyer</button>
+</form>
+<form method="post">
+    {{ delete_form.as_p }}
+    {% csrf_token %}
+    <button type="submit" >Supprimer</button>
+</form>
 {% endblock content %}
