--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,12 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
     <title>LITReview</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <div class="container-fluid" id="nav">
             <div class="row">
@@ -29,7 +29,7 @@
                     <div class="flex-grow-1">
 
                         <a class="navbar-brand" href="{% url 'feed' %}" id="brand"><img src="{% static 'images/LR_logo.png' %}"
-                                alt="" width="35" height="35" class="d-inline-block align-text-top">LITReview</a>
+                                alt="logo" width="35" height="35" class="d-inline-block align-text-top">LITReview</a>
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target=".dual-collapse2">
@@ -61,9 +61,89 @@
         </div>
     </header>
 
-    <div class="main">
+    <!-- Spacer -->
+    <div class="d-flex justify-content-center justify-content-lg-between p-2">
+    </div>
+
+    <div class="container main">
         {% block content %}{% endblock content %}
     </div>
+
+    <!-- Spacer -->
+    <div class="d-flex justify-content-center justify-content-lg-between p-2">
+    </div>
+
+    <footer class="footer text-center text-lg-start bg-custom text-white mt-auto"">
+
+      <!-- Spacer -->
+      <div class="d-flex justify-content-center justify-content-lg-between p-2">
+      </div>
+
+      
+        <!-- Section: Links  -->
+        <section class="">
+          <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+              <!-- Grid column -->
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <!-- Content -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  <i class="fas fa-gem me-3"></i>LITReview
+                </h6>
+                <p>
+                    Site web permettant à une communauté d'utilisateurs de consulter ou de solliciter une critique de livres à la demande.
+                </p>
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Liens utiles
+                </h6>
+                <p>
+                  <a href="https://www.python.org/" class="text-reset">Python</a>
+                </p>
+                <p>
+                  <a href="https://www.djangoproject.com/" class="text-reset">Django</a>
+                </p>
+                <p>
+                  <a href="https://getbootstrap.com/" class="text-reset">Bootstrap</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+            
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                <p>
+                  <i class="fas fa-envelope me-3"></i>
+                  lit@review.com
+                </p>
+                <p><i class="fas fa-phone me-3"></i> + 33 6 54 57 27 33</p>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+          </div>
+        </section>
+        <!-- Section: Links  -->
+      
+        <!-- Copyright -->
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+          © 2022 Copyright:
+          <a class="text-reset fw-bold" href="https://github.com/A-Nourry">GitHub du projet</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
