--- a/myapp/templates/myapp/create_review.html
+++ b/myapp/templates/myapp/create_review.html
@@ -3,11 +3,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Écrire une critique</h2>
-    <form method="post" enctype="multipart/form-data">
-        {{ ticket_form.as_p }}
-        {{ review_form.as_p }}
-        {% csrf_token %}
-        <button type="submit" >Envoyer</button>
-    </form>
+<div class="container">
+    <div class="row">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+
+            <div class="card border-transparent bg-transparent bg-gradient mb-3 p-4 text-white" style="max-width: 100%;">
+
+                <div class="card-header">
+                    <h3 class="d-flex justify-content-center">Créer une critique</h3>
+                </div>
+
+                <!--Ticket form-->
+                <div class="card-header">
+                    <p class="m-2">Titre : </p>
+                    <div class="p-2">{{ ticket_form.title }}</div>
+                    <p class="m-2">Description : </p>
+                    <div class="m-2">{{ ticket_form.description }}</div>
+                    <p class="m-2">Image : </p>
+                    <div class="p-2">{{ ticket_form.image }}</div>
+                </div>
+
+                <!--Review form-->
+                <p class="m-2">Titre : </p>
+                <span class="p-2">{{ review_form.title }}</span>
+
+                <p class="m-2">Note : </p>
+                <div class="d-flex">
+                    <span class="p-2">{{ review_form.rating.0 }}</span>
+                    <span class="p-2">{{ review_form.rating.1 }}</span>
+                    <span class="p-2">{{ review_form.rating.2 }}</span>
+                    <span class="p-2">{{ review_form.rating.3 }}</span>
+                    <span class="p-2">{{ review_form.rating.4 }}</span>
+                    <span class="p-2">{{ review_form.rating.5 }}</span>
+                </div>
+
+                <p class="m-2">Commentaire : </p>
+                <span class="p-2">{{ review_form.comment }}</span>
+
+                <div class="col-md-12 d-flex justify-content-end p-2">
+                    <button type="submit" class="btn btn-custom">Envoyer</button>
+                </div>
+                
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock content %}
