--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -3,14 +3,30 @@
 
 {% block content %}
 
-<form method="post">
-    <h2>Connectez-vous</h2>
-    {{ form.as_p }}
-    {% csrf_token %}
-    <button type="submit">Se connecter</button>
-</form>
+<div class="container">
+    <div class="row">
 
-<h2>Inscrivez-vous maintenant</h2>
-<p><a href="{% url 'signup' %}"><button type="submit">S'inscrire</button></a></p>
+        <div class="col-md-6">
+            <h3 class="d-flex justify-content-center">Inscrivez-vous maintenant</h3>
+            <p class="d-flex justify-content-center p-2"><a href="{% url 'signup' %}"><button type="submit" class="btn btn-custom">S'inscrire</button></a></p>
+        </div>
+
+        <div class="col-md-6">
+            <h3 class="d-flex justify-content-center">Connectez-vous</h3>
+
+            <form method="post" class="">
+                {% csrf_token %}
+                <div class="p-3">{{ form.username }}</div>
+                <div class="p-3">{{ form.password }}</div>
+                 <p>{{ message }}</p>
+
+                <div class="col-md-12 d-flex justify-content-end">
+                <button type="submit" class="btn btn-custom">Se connecter</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
 
 {% endblock content %}
