--- a/myapp/templates/myapp/ticket_review.html
+++ b/myapp/templates/myapp/ticket_review.html
@@ -10,9 +10,10 @@
             <span class=""><h3>Créer une critique</h3></span>
         </div>
 
-        <div class="card-body">
+        <div class="card-body  m-3">
+            <h5>Vous êtes en train de poster en réponse à : </h5>
 
-            <div class="card bg-custom bg-gradient mb-3 d-flex justify-content-center" style="max-width: 80%;">
+            <div class="card bg-custom bg-gradient">
                 <div class="card-header">
                 Ticket - {{ ticket.requester }}
                 </div>
