--- a/myapp/templates/myapp/my_posts.html
+++ b/myapp/templates/myapp/my_posts.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2>Vos posts</h2>
+<h2 class="d-flex justify-content-center">Vos posts</h2>
 <div class="container main_feed">
 
     {% for instance in posts %}
