--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="shortcut icon" href="{% static 'images/LR_logo.png' %}">
 
     <title>LITReview</title>
 </head>
@@ -108,12 +109,12 @@
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <!-- Links -->
                 <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                <p><i class="fas fa-home me-3"></i> Dunwich, IA 00027, US</p>
                 <p>
                   <i class="fas fa-envelope me-3"></i>
                   lit@review.com
                 </p>
-                <p><i class="fas fa-phone me-3"></i> + 33 6 54 57 27 33</p>
+                <p><i class="fas fa-phone me-3"></i> + 33 7 42 61 70 00</p>
               </div>
               <!-- Grid column -->
             </div>
