--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,7 @@
     <div class="d-flex justify-content-center justify-content-lg-between p-4">
     </div>
 
+    <!--Main content-->
     <div class="container main p-5">
         {% block content %}{% endblock content %}
     </div>
