--- a/static/scss/utils/_variables.scss
+++ b/static/scss/utils/_variables.scss
@@ -1,2 +1,3 @@
 $primary-color: rgb(51, 82, 117);
-$secondary-color: rgb(27, 60, 97);
+$secondary-color: rgb(20, 46, 75);
+$third-color: rgb(214, 170, 89);
