--- a/myapp/templates/myapp/subscriptions.html
+++ b/myapp/templates/myapp/subscriptions.html
@@ -18,18 +18,28 @@
 
         <h2 class="d-flex justify-content-center">Abonnements</h2>
         {% for user in followed %}
-        <form class="d-flex" method="post">
-            {% csrf_token %}
-            <table class="table table-borderless bg-transparent bg-gradient border-transparent text-white">
-                <tbody>
-                    <th scope="col">{{ user }}</th>
-                    <th scope="col"><div class=" d-flex justify-content-end">
-                        <button type="submit" class="btn btn-custom">Désabonner</button>
-                    </div></th>
-                </tbody>
-            </table>  
-        </form>
+        <table class="table table-borderless bg-transparent bg-gradient border-transparent text-white">
+            <tbody>
+                
+
+                <th scope="col">{{ user }}</th>
+
+                <th scope="col">
+                    <form class="d-flex justify-content-end" method="post">
+                        {% csrf_token %}
+                        {{ unfollow_form }}
+                        <div class=" d-flex justify-content-end">
+                            <input type="hidden" value='{{ user }}' name="user">
+                            <button type="submit" class="btn btn-custom">Désabonner</button>
+                        </div>
+                    </form>
+                </th>
+                
+            </tbody>
+        </table>  
         {% endfor %}
+
+        
 
 
         <h2 class="d-flex justify-content-center">Abonnés</h2>
